# blend-ai

./: .gitignore  Makefile  README.md  build.ps1  build.sh  install-addon.sh  install_addon.py  mcp.json  pyproject.toml
.github/workflows/: ci.yml  pylint.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/notes/: 2026-03-23-tracing-reference-images.md
addon/: __init__.py  blender_manifest.toml  dispatcher.py  render_guard.py  server.py  thread_safety.py  ui_panel.py
addon/handlers/: __init__.py  animation.py  armature.py  booltool.py  camera.py  code_exec.py  collections.py  curves.py  file_ops.py  geometry_nodes.py  gpencil.py  lighting.py  materials.py  mesh_editing.py  mesh_quality.py  modeling.py  objects.py  physics.py  rendering.py  scene.py  sculpting.py  transforms.py  uv.py  viewport.py
src/blend_ai/: __init__.py  connection.py  ollama_chat.py  server.py  validators.py
tests/: conftest.py  test_connection.py  test_installer.py  test_ollama_chat.py  test_validators.py
tests/test_addon/: conftest.py  test_dispatcher.py  test_render_guard.py  test_server.py
tests/test_tools/: conftest.py  test_animation.py  test_armature.py  test_auto_critique_prompt.py  test_booltool.py  test_camera.py  test_collections.py  test_curves.py  test_file_ops.py  test_geometry_nodes.py  test_gpencil.py  test_lighting.py  test_materials.py  test_mesh_editing.py  test_modeling.py  test_objects.py  test_physics.py  test_prompts.py  (+7 more)
(+59 files in other folders)
